# Dlib-Face-Detection

app/: CMakeLists.txt  build.gradle
app/src/main/assets/: README.txt  compute_foreground_pro.cl  refinekernel.cl  utils.cl
app/src/main/cpp/: AndroidDebug.cpp  AndroidDebug.h  CMakeLists.txt  com_panjq_opencv_alg_ImagePro.h  imagePro.cpp  test_main_68_32.cpp
app/src/main/cpp/detect/: DetectFeature.cpp  DetectFeature.h  dlibFaceDetection.cpp
app/src/main/java/: JNI_RUN.bat
app/src/main/java/com/panjq/opencv/alg/: FaceDetection.java
app/src/main/java/com/panjq/opencv/opencvdemo/: CopyFileTask.java  FileUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/: build.gradle
